--- a/client/package.json
+++ b/client/package.json
@@ -4,9 +4,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
+    "node-sass": "^4.13.0",
+    "normalize": "^0.3.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-responsive-carousel": "^3.1.51",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "validator": "^12.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
