--- a/package.json
+++ b/package.json
@@ -25,14 +25,18 @@
   "homepage": "https://github.com/emmanuel-brown/Ecomerce_Mongo#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.2",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.1",
     "if-env": "^1.0.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "react-youtube": "^7.9.0",
+    "validator": "^12.1.0"
   }
 }
