--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "helmet": "^3.21.1",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.7.11",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
