--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "browser-image-compression": "^1.0.6",
     "jwt-decode": "^2.2.0",
     "node-sass": "^4.13.0",
     "normalize": "^0.3.1",
